--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -54,21 +54,25 @@ block content
             .main__top
                 .burger
                 ul.list
-                    li.list__item О компании 
-                    li.list__item Техподдержка
-                    li.list__item Подключиться
+                    li.list__item
+                        a.list__item_link(href="#") О компании 
+                    li.list__item
+                        a.list__item_link(href="#") Техподдержка
+                    li.list__item
+                        a.list__item_link(href="#") Подключиться
             h1.main__title Безлимитный интернет
                 span.big-text DN-650 за 500 руб/мес
                 span.small-text Скорость входящего/исходящего канала, Кбит/с днем 14000,ночью 20000
             a.btn(href="#") Подключиться 
         .slider
-            .slider__block
-                .card
-                .card
-                .card-horize
-            .slider__block
-                .card
-                .card
-                .card
-                .card
-        .grey
+            .slifer__wrap
+                .slider__block
+                    .card
+                    .card
+                    .card-horize
+                .slider__block
+                    .card
+                    .card
+                    .card
+                    .card
+            .grey
