--- a/src/styles/layout/base.scss
+++ b/src/styles/layout/base.scss
@@ -1,15 +1,14 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'FuturaPT', sans-serif;
-  line-height: 1.42;
-  letter-spacing: 0.02em;
+  font-family: Roboto;
   color: #000000;
-  text-transform: uppercase;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+img {
+  width: 100%;
+}
 html, body {
   width: 100%;
   height: 100%;
