--- a/src/template/loyout.pug
+++ b/src/template/loyout.pug
@@ -10,6 +10,7 @@ html(lang='ru')
         title #{title}
         link(rel="shortcut icon" href="images/content/favicon.ico" type="image/x-icon")
         link(rel='stylesheet', href='styles/main.css')
+        link(href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet")
     body
         block content
 
