--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -80,7 +80,7 @@ block content
                 .slider__block
                     .card
                     .card
-                    .card-horize
+                    .card.card-horize
                 .slider__block
                     .card
                     .card
