--- a/src/template/loyout.pug
+++ b/src/template/loyout.pug
@@ -17,4 +17,5 @@ html(lang='ru')
         //- include section/modal_form.pug
         
         script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js")
+        script(type="text/javascript" src="js/libs/owl.carousel.min.js")
         script(type="text/javascript" src="js/main.js")
