--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -4,45 +4,6 @@ block variables
     - var title= "Новый проект"
 block content
     section.hero
-        .menu
-            button(type="button") Весь сайт
-            .menu__block
-                ul.menu__list
-                    li.menu__item
-                        a.menu__link(href="#") О компании
-                    li.menu__item
-                        a.menu__link(href="#") Отзывы
-                    li.menu__item
-                        a.menu__link(href="#") Вакансии
-                    li.menu__item
-                        a.menu__link(href="#") Контакты
-            .menu__block
-                ul.menu__list
-                    li.menu__item
-                        a.menu__link(href="#") Услуги
-                    li.menu__item
-                        a.menu__link(href="#") Инструкции
-                    li.menu__item
-                        a.menu__link(href="#") Документы
-                    li.menu__item
-                        a.menu__link(href="#") Тарифы
-            .menu__block
-                ul.menu__list
-                    li.menu__item
-                        a.menu__link(href="#") Личный кабинет
-                    li.menu__item
-                        a.menu__link(href="#") Подключиться
-                    li.menu__item
-                        a.menu__link(href="#") Техподдержка
-                    li.menu__item
-                        a.menu__link(href="#") База знаний
-            .menu__block
-                ul.menu__list
-                    li.menu__item
-                        a.menu__link(href="tel:+79285066700") +7 (928) 506-67-00
-                    li.menu__item
-                        a.menu__link(href="#") Задать вопрос
-            button.btn(type="button") Нравится
         aside.aside
             .aside__logo   
                 a.logo(href="#")
@@ -57,33 +18,80 @@ block content
                         li.aside-list__item Тарифы
                 .acord_block.acord_block--three Для бизнеса
         .main
-            .main-cntent  
-                .main__top
-                    .burger
-                        .burger__line.burger__line--1
-                        .burger__line.burger__line--2
-                        .burger__line.burger__line--3
-                    ul.nav-list
-                        li.nav-list__item
-                            a.nav-list__item_link(href="#") О компании 
-                        li.nav-list__item
-                            a.nav-list__item_link(href="#") Техподдержка
-                        li.nav-list__item
-                            a.nav-list__item_link(href="#") Подключиться
-                h1.main__title 
-                    span.main__title_span.light-24 Безлимитный интернет
-                    span.main__title_span.medium-65 DN-650 за 500 руб/мес
-                    span.main__title_span.regular-14 Скорость входящего/исходящего канала, Кбит/с днем 14000, ночью 20000
-                a.btn(href="#") Подключиться 
+            .menu.menu--visible
+                button.btn.btn--back(type="button") Весь сайт
+                .menu__block
+                    ul.menu__list
+                        li.menu__item
+                            a.menu__link(href="#") О компании
+                        li.menu__item
+                            a.menu__link(href="#") Отзывы
+                        li.menu__item
+                            a.menu__link(href="#") Вакансии
+                        li.menu__item
+                            a.menu__link(href="#") Контакты
+                .menu__block
+                    ul.menu__list
+                        li.menu__item
+                            a.menu__link(href="#") Услуги
+                        li.menu__item
+                            a.menu__link(href="#") Инструкции
+                        li.menu__item
+                            a.menu__link(href="#") Документы
+                        li.menu__item
+                            a.menu__link(href="#") Тарифы
+                .menu__block
+                    ul.menu__list
+                        li.menu__item
+                            a.menu__link(href="#") Личный кабинет
+                        li.menu__item
+                            a.menu__link(href="#") Подключиться
+                        li.menu__item
+                            a.menu__link(href="#") Техподдержка
+                        li.menu__item
+                            a.menu__link(href="#") База знаний
+                .menu__block
+                    ul.menu__list
+                        li.menu__item
+                            a.menu__link(href="tel:+79285066700") +7 (928) 506-67-00
+                        li.menu__item
+                            a.menu__link(href="#") Задать вопрос
+                button.btn(type="button") Нравится
+            .main__top
+                .burger
+                    .burger__line.burger__line--1
+                    .burger__line.burger__line--2
+                    .burger__line.burger__line--3
+                ul.nav-list
+                    li.nav-list__item
+                        a.nav-list__item_link(href="#") О компании 
+                    li.nav-list__item
+                        a.nav-list__item_link(href="#") Техподдержка
+                    li.nav-list__item
+                        a.nav-list__item_link(href="#") Подключиться
+            h1.main__title 
+                span.main__title_span.light-24 Безлимитный интернет
+                span.main__title_span.medium-65 DN-650 за 500 руб/мес
+                span.main__title_span.regular-14 Скорость входящего/исходящего канала, Кбит/с днем 14000, ночью 20000
+            a.btn(href="#") Подключиться 
         .slider
-            .slifer__wrap
+            .slider__wrap.owl-carousel
                 .slider__block
-                    .card
-                    .card
-                    .card.card-horize
+                    .card.card-promo
+                        .card-promo__pic(style="background-image:url(images/content/img1.jpg)")
+                        .card-promo__content
+                            p Телевизионные каналы в цифровом качестве на основе технологии IP (IPTV)
+                            .date 28 ЯНВАРЯ 2016
+                    .card.card-news
+                        .card-news__date 11 февраля 2016 в 4:34
+                        .card-news__content
+                            p Произошла авария с обрывом линий сетей интренет на пересечении улиц Грозненская и Тотурбиева…
+                    .card.card-map
+                        .card-map__adres
+                            .card-map__adres_top
+                            .card-map__adres_bottom
                 .slider__block
-                    .card
-                    .card
-                    .card
-                    .card
-            .grey
+                    .card.card--orange
+                    .card.card--beige
+                    .card.card--light-beige
+                    .card.card--brown
