--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -19,7 +19,7 @@ block content
                 .acord_block.acord_block--three Для бизнеса
         .main
             .menu.menu--visible
-                button.btn.btn--back(type="button") Весь сайт
+                .menu__btn-back Весь сайт
                 .menu__block
                     ul.menu__list
                         li.menu__item
@@ -30,7 +30,6 @@ block content
                             a.menu__link(href="#") Вакансии
                         li.menu__item
                             a.menu__link(href="#") Контакты
-                .menu__block
                     ul.menu__list
                         li.menu__item
                             a.menu__link(href="#") Услуги
@@ -50,13 +49,12 @@ block content
                             a.menu__link(href="#") Техподдержка
                         li.menu__item
                             a.menu__link(href="#") База знаний
-                .menu__block
                     ul.menu__list
                         li.menu__item
                             a.menu__link(href="tel:+79285066700") +7 (928) 506-67-00
                         li.menu__item
                             a.menu__link(href="#") Задать вопрос
-                button.btn(type="button") Нравится
+                button.like-vk(type="button") Нравится
             .main__top
                 .burger
                     .burger__line.burger__line--1
