--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -18,43 +18,45 @@ block content
                         li.aside-list__item Тарифы
                 .acord_block.acord_block--three Для бизнеса
         .main
-            .menu.menu--visible
-                .menu__btn-back Весь сайт
-                .menu__block
-                    ul.menu__list
-                        li.menu__item
-                            a.menu__link(href="#") О компании
-                        li.menu__item
-                            a.menu__link(href="#") Отзывы
-                        li.menu__item
-                            a.menu__link(href="#") Вакансии
-                        li.menu__item
-                            a.menu__link(href="#") Контакты
-                    ul.menu__list
-                        li.menu__item
-                            a.menu__link(href="#") Услуги
-                        li.menu__item
-                            a.menu__link(href="#") Инструкции
-                        li.menu__item
-                            a.menu__link(href="#") Документы
-                        li.menu__item
-                            a.menu__link(href="#") Тарифы
-                .menu__block
-                    ul.menu__list
-                        li.menu__item
-                            a.menu__link(href="#") Личный кабинет
-                        li.menu__item
-                            a.menu__link(href="#") Подключиться
-                        li.menu__item
-                            a.menu__link(href="#") Техподдержка
-                        li.menu__item
-                            a.menu__link(href="#") База знаний
-                    ul.menu__list
-                        li.menu__item
-                            a.menu__link(href="tel:+79285066700") +7 (928) 506-67-00
-                        li.menu__item
-                            a.menu__link(href="#") Задать вопрос
-                button.like-vk(type="button") Нравится
+            .menu
+                a.menu__btn-back(href="") Весь сайт
+                .menu__content
+                    .menu__block
+                        ul.menu__list
+                            li.menu__item
+                                a.menu__link(href="#") О компании
+                            li.menu__item
+                                a.menu__link(href="#") Отзывы
+                            li.menu__item
+                                a.menu__link(href="#") Вакансии
+                            li.menu__item
+                                a.menu__link(href="#") Контакты
+                        ul.menu__list
+                            li.menu__item
+                                a.menu__link(href="#") Услуги
+                            li.menu__item
+                                a.menu__link(href="#") Инструкции
+                            li.menu__item
+                                a.menu__link(href="#") Документы
+                            li.menu__item
+                                a.menu__link(href="#") Тарифы
+                    .menu__block
+                        ul.menu__list
+                            li.menu__item
+                                a.menu__link(href="#") Личный кабинет
+                            li.menu__item
+                                a.menu__link(href="#") Подключиться
+                            li.menu__item
+                                a.menu__link(href="#") Техподдержка
+                            li.menu__item
+                                a.menu__link(href="#") База знаний
+                        ul.menu__list
+                            li.menu__item
+                                a.menu__link(href="tel:+79285066700") +7 (928) 506-67-00
+                            li.menu__item
+                                a.menu__link(href="#") Задать вопрос
+                    a.like-vk(href="") Нравится
+                        span.like-vk__num 1
             .main__top
                 .burger
                     .burger__line.burger__line--1
