--- a/src/styles/section/style.scss
+++ b/src/styles/section/style.scss
@@ -21,6 +21,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0 18px;
+  text-align: center;
 }
 .acord_block--one {
   height: 85px;
