--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -9,14 +9,14 @@ block content
                 a.logo(href="#")
                     img.logo__img(src="images/content/logo.png", alt="")
             .acord
-                .acord_block.acord_block--one Для дома
-                .acord_block.acord_block--two
-                    ul.aside-list
-                        li.aside-list__item Услуги 
-                        li.aside-list__item Инструменты
-                        li.aside-list__item Документы
-                        li.aside-list__item Тарифы
-                .acord_block.acord_block--three Для бизнеса
+                .acord__block.acord__block--one Для дома
+                .acord__block.acord__block--two
+                    //- ul.aside-list
+                    //-     li.aside-list__item Услуги 
+                    //-     li.aside-list__item Инструменты
+                    //-     li.aside-list__item Документы
+                    //-     li.aside-list__item Тарифы
+                .acord__block.acord__block--three Для бизнеса
         .main
             .menu
                 a.menu__btn-back(href="") Весь сайт
