--- a/src/styles/section/style.scss
+++ b/src/styles/section/style.scss
@@ -55,7 +55,7 @@
 @keyframes asideHide {
   from {
     transform: translateY(0);
-    height:395px;
+    height:198px;
   }
   to {
     transform: translateY(110px);
@@ -110,7 +110,7 @@
   background-image: url(../images/content/girl.png);
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 30px 35px;
+  padding: 30px 34.5px 30px 29.5px;
   position: relative;
 }
 .main__top {
@@ -213,16 +213,16 @@
 }
 .menu__content {
     opacity: 0;
-  animation: menuContentHide 600ms 1 ease;
+  animation: menuContentHide 500ms 1 ease;
   &--visible {
-    animation: menuContentShow 600ms 1 ease;
+    animation: menuContentShow 300ms 1 ease;
     opacity: 1;
   }
 }
 @keyframes menuContentShow {
   from {
     opacity: 0;
-    transform: translateY(30%);
+    transform: translateY(10%);
   }
   to {
     opacity: 1;
@@ -236,7 +236,7 @@
   }
   to {
     opacity: 0;
-    transform: translateY(30%);
+    transform: translateY(10%);
   }
 }
 .menu__block {
