--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -19,7 +19,6 @@ block content
                 .acord__block.acord__block--three Для бизнеса
         .main
             .menu
-                a.menu__btn-back(href="") Весь сайт
                 .menu__content
                     .menu__block
                         ul.menu__list
@@ -57,23 +56,26 @@ block content
                                 a.menu__link(href="#") Задать вопрос
                     a.like-vk(href="") Нравится
                         span.like-vk__num 1
-            .main__top
-                .burger
-                    .burger__line.burger__line--1
-                    .burger__line.burger__line--2
-                    .burger__line.burger__line--3
-                ul.nav-list
-                    li.nav-list__item
-                        a.nav-list__item_link(href="#") О компании 
-                    li.nav-list__item
-                        a.nav-list__item_link(href="#") Техподдержка
-                    li.nav-list__item
-                        a.nav-list__item_link(href="#") Подключиться
-            h1.main__title 
-                span.main__title_span.light-24 Безлимитный интернет
-                span.main__title_span.medium-65 DN-650 за 500 руб/мес
-                span.main__title_span.regular-14 Скорость входящего/исходящего канала, Кбит/с днем 14000, ночью 20000
-            a.btn(href="#") Подключиться 
+            .main-wrap
+                .main__top
+                    .burger
+                        .burger__line.burger__line--1
+                        .burger__line.burger__line--2
+                        .burger__line.burger__line--3
+                    a.menu__btn-back(href="") Весь сайт
+                    ul.nav-list
+                        li.nav-list__item
+                            a.nav-list__item_link(href="#") О компании 
+                        li.nav-list__item
+                            a.nav-list__item_link(href="#") Техподдержка
+                        li.nav-list__item
+                            a.nav-list__item_link(href="#") Подключиться
+                .main-content
+                    h1.main__title 
+                        span.main__title_span.light-24 Безлимитный интернет
+                        span.main__title_span.medium-65 DN-650 за 500 руб/мес
+                        span.main__title_span.regular-14 Скорость входящего/исходящего канала, Кбит/с днем 14000, ночью 20000
+                    a.btn(href="#") Подключиться 
         .slider
             .slider__wrap.owl-carousel
                 .slider__block
