--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -77,23 +77,27 @@ block content
                         span.main__title_span.regular-14 Скорость входящего/исходящего канала, Кбит/с днем 14000, ночью 20000
                     a.btn(href="#") Подключиться 
         .slider
-            .slider__wrap.owl-carousel
-                .slider__block
-                    .card.card-promo
-                        .card-promo__pic(style="background-image:url(images/content/img1.jpg)")
-                        .card-promo__content
-                            p Телевизионные каналы в цифровом качестве на основе технологии IP (IPTV)
-                            .date 28 ЯНВАРЯ 2016
-                    .card.card-news
-                        .card-news__date 11 февраля 2016 в 4:34
-                        .card-news__content
-                            p Произошла авария с обрывом линий сетей интренет на пересечении улиц Грозненская и Тотурбиева…
-                    .card.card-map
-                        .card-map__adres
-                            .card-map__adres_top
-                            .card-map__adres_bottom
-                .slider__block
-                    .card.card--orange
-                    .card.card--beige
-                    .card.card--light-beige
-                    .card.card--brown
+            .carousel_wrap
+                .next 
+                    span 
+                .visual_block
+                    ul.slider__wrap
+                        li.slider__block
+                            .card.card-promo
+                                .card-promo__pic(style="background-image:url(images/content/img1.jpg)")
+                                .card-promo__content
+                                    p Телевизионные каналы в цифровом качестве на основе технологии IP (IPTV)
+                                    .date 28 ЯНВАРЯ 2016
+                            .card.card-news
+                                .card-news__date 11 февраля 2016 в 4:34
+                                .card-news__content
+                                    p Произошла авария с обрывом линий сетей интренет на пересечении улиц Грозненская и Тотурбиева…
+                            .card.card-map
+                                .card-map__adres
+                                    .card-map__adres_top
+                                    .card-map__adres_bottom
+                        li.slider__block
+                            .card.card--orange
+                            .card.card--beige
+                            .card.card--light-beige
+                            .card.card--brown
