--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -11,11 +11,6 @@ block content
             .acord
                 .acord__block.acord__block--one Для дома
                 .acord__block.acord__block--two
-                    //- ul.aside-list
-                    //-     li.aside-list__item Услуги 
-                    //-     li.aside-list__item Инструменты
-                    //-     li.aside-list__item Документы
-                    //-     li.aside-list__item Тарифы
                 .acord__block.acord__block--three Для бизнеса
         .main
             .menu
@@ -82,7 +77,7 @@ block content
                     span 
                 .visual_block
                     ul.slider__wrap
-                        li.slider__block
+                        li.slider__block.active
                             .card.card-promo
                                 .card-promo__pic(style="background-image:url(images/content/img1.jpg)")
                                 .card-promo__content
