--- a/src/styles/section/style.scss
+++ b/src/styles/section/style.scss
@@ -23,6 +23,7 @@
     transform: translateY(0);
     transition: all .5s ease;
     z-index: 10;
+    cursor: pointer;
   }
   .acord__block--two {
     height: 198px;
@@ -332,8 +333,72 @@
   display: flex;
   flex-wrap: wrap;
   padding: 17.6px 0 0 18px;
+  opacity:0;
   .card:nth-child(odd){
     margin-right: 15px;
+  }
+  &.active {
+    opacity: 1;
+    z-index: 10;
+    overflow: hidden;
+    .card-promo {
+      transform: translateX(0px);
+      transition: all .8s ease-in;
+    }
+    .card-news {
+      transform: translateX(0px);
+      transition: all 1.1s ease-in;
+    }
+    .card-map {
+      transform: translateX(0px);
+      transition: all .5s ease-in;
+    }
+    .card--orange {
+      transform: translateX(0px);
+      transition: all .4s ease-in;
+    }
+    .card--beige {
+      transform: translateX(0px);
+      transition: all .8s linear;
+    }
+    .card--light-beige {
+      transform: translateX(0px);
+      transition: all .6s ease-in;
+    }
+    .card--brown {
+      transform: translateX(0px);
+      transition: all 1s linear;
+    }
+  }
+  &.dop {
+    .card-promo {
+      transform: translateX(-500px);
+      transition: all .8s linear;
+    }
+    .card-news {
+      transform: translateX(-500px);
+      transition: all 1.2s linear;
+    }
+    .card-map {
+      transform: translateX(-500px);
+      transition: all .4s linear;
+    }
+    .card--orange {
+      transform: translateX(-500px);
+      transition: all .4s ease-out;
+    }
+    .card--beige {
+      transform: translateX(-500px);
+      transition: all .9s linear;
+    }
+    .card--light-beige {
+      transform: translateX(-500px);
+      transition: all .7s linear;
+    }
+    .card--brown {
+      transform: translateX(-500px);
+      transition: all 1.2s ease-in-out;
+    }
   }
 }
 .card {
@@ -344,15 +409,15 @@
   overflow: hidden;
 }
 .card-promo {
-  // transform: translateX(1000px);
-  transition: all 1s ease;
+  transform: translateX(400px);
+  transition: all .8s linear;
   &:hover {
     .card-promo__pic {
-      transition: all .3s ease;
+      transition: all .3s linear;
       transform: scale(1.1);
     }
     .card-promo__content {
-      transition: all .3s ease;
+      transition: all .3s linear;
       height: 50%;
       transform: translateY(-25px);
     }
@@ -362,7 +427,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 56%;
-  transition: all .3s ease;
+  transition: all .3s linear;
   z-index: 5;
 }
 .card-promo__content {
@@ -370,7 +435,7 @@
   background-color: $white;
   padding: 37px 43px 17px;
   z-index: 6;
-  transition: all .3s ease;
+  transition: all .3s linear;
   p {
     font-weight: 700;
     font-size: 24px;
@@ -392,8 +457,8 @@
 .card-news {
   background-color: #1c5394;
   padding: 28px 0;
-  // transform: translateX(2000px);
-  transition: all 1.3s ease;
+  transform: translateX(600px);
+  transition: all 1s linear;
 }
 .card-news__date {
   font-size: 14px;
@@ -421,8 +486,8 @@
   background-color: #e9e5dc;
   max-width: 836px;
   position: relative;
-  // transform: translateX(1000px);
-  transition: all .7s ease;
+  transform: translateX(200px);
+  transition: all .5s linear;
 }
 .card-map__adres {
   background-color: $white;
@@ -442,102 +507,23 @@
 }
 .card--orange {
   background-color: #f4c22d;
-  // transform: translateX(1000px);
-  transition: all .9s ease;
+  transform: translateX(150px);
+  transition: all .7s linear-out;
 }
 .card--beige{
   background-color: #fdf2d2;
-  // transform: translateX(1000px);
-  transition: all 1s ease;
+  transform: translateX(300px);
+  transition: all .9s linear;
 }
 .card--light-beige{
-  // background-color: #f4f7e6;
-  background-color: #00a8ff;
-  // transform: translateX(1000px);
-  transition: all .7s ease;
+  background-color: #f4f7e6;
+  transform: translateX(100px);
+  transition: all .4s linear;
 }
 .card--brown{
   background-color: #666841;
-  // transform: translateX(1000px);
-  transition: all 1.6s ease;
-}
-.owl-item {
-  overflow: hidden;
-  position: relative;
-  &.active {
-    .card-promo {
-      transform: translateX(0px);
-      transition: all 1s ease-in-out;
-    }
-    .card-news {
-      transform: translateX(0px);
-      transition: all 1.3s ease-in-out;
-    }
-    .card-map {
-      transform: translateX(0px);
-      transition: all .7s ease-in-out;
-    }
-    .card--orange {
-      transform: translateX(0px);
-      transition: all .6s ease-in-out;
-    }
-    .card--beige {
-      transform: translateX(0px);
-      transition: all .8s ease-in-out;
-    }
-    .card--light-beige {
-      transform: translateX(0px);
-      transition: all .4s ease-in-out;
-    }
-    .card--brown {
-      transform: translateX(0px);
-      transition: all 1s ease;
-    }
-  }
-  &.dop {
-    .card-promo {
-      transform: translateX(-1000px);
-    }
-    .card-news {
-      transform: translateX(-1000px);
-    }
-    .card-map {
-      transform: translateX(-1000px);
-    }
-    .card--orange {
-      transform: translateX(-1200px);
-      transition: all .6s ease;
-    }
-    .card--beige{
-      transform: translateX(-1200px);
-      transition: all 0.8s ease;
-    }
-    .card--light-beige{
-      transform: translateX(-1200px);
-      transition: all .4s ease;
-    }
-    .card--brown{
-      transform: translateX(-1200px);
-      transition: all 1s ease;
-    }
-  }
-}
-.owl-nav {
-  width: 109px;
-  position: absolute;
-  top: 0;
-  right:0;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #f0f1f2;
-}
-.owl-prev {
-  display: none;
-}
-.owl-next {
-  z-index: 20;
+  transform: translateX(500px);
+  transition: all 1.3s linear;
 }
 .carousel_wrap  {
   height:100%;
@@ -552,12 +538,14 @@
 .visual_block ul {
   position: relative;
 }
-.visual_block ul, .visual_block li {
+.visual_block ul {
   height:100%;
   float: left;
   position: relative;
 }
 .visual_block li {
+  float: left;
+  position: relative;
   width:960px;
 }
 .next {
@@ -572,10 +560,13 @@
   z-index: 15;    
   background-color: #f0f1f2;
   span {
+    cursor: pointer;
     height: 60.4px;
     width: 60.4px;
     border-radius: 50%;
     background-color: $white;
+    position: absolute;
+    top: 40.5%;
     &:after {
       content:"";
       position: absolute;
