--- a/src/template/loyout.pug
+++ b/src/template/loyout.pug
@@ -9,7 +9,7 @@ html(lang='ru')
         meta(name='viewport', content='width=device-width, initial-scale=1')
         title #{title}
         link(rel="shortcut icon" href="images/content/favicon.ico" type="image/x-icon")
-        link(rel='stylesheet', href='styles/main.css')
+        link(rel='stylesheet', href='styles/main.min.css')
         link(href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet")
     body
         block content
